alignment issues corrected

--- a/css/general.css
+++ b/css/general.css
@@ -15,7 +15,7 @@ h2 {
     Font-Family: 'Ubuntu', Sans-Serif;
 }
 .laura {
-    text-align: left;
+    align-self: left;
 }
 h3 {
     text-align: center;
@@ -47,6 +47,10 @@ h4 {
 
   .lauraname{
     text-align: center;
+  }
+
+  .laura{
+    align-self: center;
   }
 }
 
